fix border alignment of time-limit flyout

--- a/src/editor/info/components/TimeLimit.scss
+++ b/src/editor/info/components/TimeLimit.scss
@@ -8,7 +8,7 @@
 
 .flyout.assignment-option-flyout {
 	.flyout-inner {
-		box-shadow: inset -1px 0 0 0 $border-grey-light,
+		box-shadow: 1px 0 0 0 $border-grey-light,
 					-1px 0 0 0 $border-grey-light,
 					0 1px 0 0 $border-grey-light;
 	}
